[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0-beta.11"
log = "0.4.0"
env_logger = "0.9.0"
cocktails = { path = "../cocktails" }

[dependencies.confy]
version = "0.5.1"
features = ["yaml_conf"]
default-features = false
