[package]
name = "cocktails"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
surrealdb = "1.0.0-beta.11"
common = { path = "../common" }

[dependencies.uuid]
version = "1.3.3"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
